--- a/app/src/main/res/layout/activity_c_torun.xml
+++ b/app/src/main/res/layout/activity_c_torun.xml
@@ -26,6 +26,7 @@
         android:text="@string/jd"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1.05"
+        android:maxLines="14"
         android:textColor="@color/colorAccent"
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
