--- a/app/src/main/res/layout/activity_c_olsztyn.xml
+++ b/app/src/main/res/layout/activity_c_olsztyn.xml
@@ -23,11 +23,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/jd"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1.05"
         android:maxLines="14"
-        android:textColor="@color/colorAccent"
+        android:text="@string/olsztyn_info"
+        android:textColor="@color/fontsPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
