dodano informacje do wszystkich miast

--- a/app/src/main/res/layout/activity_c_lidzbark.xml
+++ b/app/src/main/res/layout/activity_c_lidzbark.xml
@@ -12,24 +12,34 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
+        android:onClick="btnClicked"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/c_lidzbark"
-        android:onClick="btnClicked"/>
+        app:srcCompat="@mipmap/c_lidzbark" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="@string/jd"
-        android:lineSpacingExtra="8dp"
-        android:lineSpacingMultiplier="1.05"
-        android:maxLines="14"
-        android:textColor="@color/colorAccent"
-        app:fontFamily="@font/qanelas_semibolditalic"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView7">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="8sp"
+            android:lineSpacingMultiplier="1.05"
+            android:text="@string/lidzbark_info"
+            android:textColor="@color/fontsPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:fontFamily="@font/qanelas_semibolditalic" />
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
