--- a/app/src/main/res/layout/activity_c_torun.xml
+++ b/app/src/main/res/layout/activity_c_torun.xml
@@ -12,22 +12,27 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
+        android:onClick="btnClicked"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/c_torun"
-        android:onClick="btnClicked"/>
+        app:srcCompat="@mipmap/c_torun" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
-        android:text="@string/jd"
-        android:lineSpacingExtra="8dp"
+        android:layout_marginRight="20dp"
+        android:lineSpacingExtra="8sp"
         android:lineSpacingMultiplier="1.05"
         android:maxLines="14"
-        android:textColor="@color/colorAccent"
+        android:text="@string/torun_info"
+        android:textColor="@color/fontsPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
