--- a/app/src/main/res/layout/activity_c_dobre.xml
+++ b/app/src/main/res/layout/activity_c_dobre.xml
@@ -20,16 +20,21 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="@string/jd"
+        android:layout_marginEnd="20dp"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1.05"
         android:maxLines="14"
-        android:textColor="@color/colorAccent"
+        android:text="@string/dobre_info"
+        android:textColor="@color/fontsPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 </android.support.constraint.ConstraintLayout>
