--- a/app/src/main/res/layout/activity_c_frombork.xml
+++ b/app/src/main/res/layout/activity_c_frombork.xml
@@ -20,14 +20,20 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
-        android:text="@string/jd"
-        android:lineSpacingExtra="8dp"
-        android:lineSpacingMultiplier="1.05"
-        android:maxLines="14"
-        android:textColor="@color/colorAccent"
+        android:layout_marginRight="20dp"
+        android:fadeScrollbars="true"
+        android:lineSpacingExtra="1dp"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false"
+        android:text="@string/frombork_info"
+        android:textColor="@color/fontsPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
