--- a/app/src/main/res/layout/activity_c_pieniezno.xml
+++ b/app/src/main/res/layout/activity_c_pieniezno.xml
@@ -19,11 +19,26 @@
         android:onClick="btnClicked"/>
 
     <TextView
+        android:id="@+id/textView4Help"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="18dp"
+        android:fontFamily="@font/qanelas_heavy"
+        android:text="pieniężno"
+        android:textAllCaps="true"
+        android:textColor="@color/fontsPrimary"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+    <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1.05"
@@ -35,5 +50,5 @@
         app:fontFamily="@font/qanelas_semibolditalic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4Help" />
 </android.support.constraint.ConstraintLayout>
